--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-node-externals": "1.7.2"
   },
   "dependencies": {
-    "@truffle/hdwallet-provider": "^2.1.15"
+    "@truffle/hdwallet-provider": "^2.1.15",
+    "truffle-hdwallet-provider": "^1.0.17"
   }
 }
