--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@truffle/hdwallet-provider": "^2.1.15",
+    "truffle-assertions": "^0.9.2",
     "truffle-hdwallet-provider": "^1.0.17",
     "web3-provider-engine": "^17.0.1"
   }
